fähigkeiten.css
body{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-areas: 
    "nav"
    "title"
    "boxes";
}

.boxes{
    display: grid;
    grid-area: boxes;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: 
    "html-css-box javascript-box"
    "datenbanken-box django-backend-box";
    padding-left: 70px;
    padding-right: 70px;
    margin-top: 50px;
    gap: 20px;
    box-sizing: border-box;
}

.box{
    display: grid;
    grid-template-areas: 
    "icon title"
    "text text"
    "skill-bar skill-bar"
    "skill-text skill-text";
    height: auto;
    min-height: 300px;
    background-color: #EDE8DF;
    padding: 20px;
}

.box-icon{
    grid-area: icon;
    width: 70px;
    height: 70px;
    border-radius: 10px;
}

.box-icon img{
    width: 70px;
    height: 70px;
    border-radius: 10px;
}

.box-title{
    grid-area: title;
}

.box-text{
    grid-area: text;
    text-align: center;
}

.box-skill-bar{
    grid-area: skill-bar;
    background-color: #ccc;
    height: 6px;
    border-radius: 3px;
    width: 100%;
}

.box-level-text{
    grid-area: skill-text;
}

.skill-fill{
    background-color: #4caf50;
    height: 100%;
    border-radius: 3px;
}

.skill-fill-HTML{
    width: 80%;
}

.skill-fill-JS{
    width: 55%;
}

.skill-fill-Datenbanken{
    width: 75%;
}

.skill-fill-Django{
    width: 55%;
}

.html-css-box{
    grid-area: html-css-box;
}

.javascript-box{
    grid-area: javascript-box;
}

.datenbanken-box{
    grid-area: datenbanken-box;
}

.django-backend-box{
    grid-area: django-backend-box;
}

@media (max-width: 1000px) {
    .boxes{
        grid-template-columns: 1fr;
        grid-template-areas: 
        "html-css-box" 
        "javascript-box"
        "datenbanken-box"
        "django-backend-box";
        padding-left: 20px;
        padding-right: 20px;
    }
}

